--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
     "description": "Landing page for the CapyKey",
     "main": "index.js",
     "scripts": {
-      "start": "eleventy --serve --quiet",
-      "build": "NODE_ENV=production eleventy"
+        "start": "eleventy --serve --quiet",
+        "build": "NODE_ENV=production eleventy"
     },
     "author": "Javier Bullrich <javier@bullrich.dev>",
     "license": "ISC",
     "devDependencies": {
-      "@11ty/eleventy": "^2.0.0",
-      "html-minifier": "^4.0.0"
+        "@11ty/eleventy": "^2.0.0",
+        "@tailwindcss/typography": "^0.5.10",
+        "autoprefixer": "^10.4.16",
+        "cssnano": "^6.0.1",
+        "html-minifier": "^4.0.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.3.5"
     }
-  }
+}
