--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
         "cssnano": "^6.0.1",
+        "daisyui": "^4.4.17",
         "html-minifier": "^4.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5"
